# jira_mcp

./: Dockerfile  dockerignore  mcp_server.py  mcp_server_test.py  pyproject.toml
